--- a/Earthquake Impact Prediction.ipynb
+++ b/Earthquake Impact Prediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOB1SB5sBjxLt5r1AbpwFsb",
+      "authorship_tag": "ABX9TyO847spUeFbuCOLHALuioHD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -522,6 +522,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Milestone 1"
+      ],
+      "metadata": {
+        "id": "BVAavazYsHLS"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "\n",
@@ -750,7 +759,8 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1Xq4KG_l2ocv",
-        "outputId": "683df08d-77c5-40dc-e804-56761a86c4d1"
+        "outputId": "683df08d-77c5-40dc-e804-56761a86c4d1",
+        "collapsed": true
       },
       "execution_count": null,
       "outputs": [
@@ -846,6 +856,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Milestone 2\n"
+      ],
+      "metadata": {
+        "id": "0N_g0CcesPeR"
+      }
     }
   ]
 }
